<resources>
    <string name="app_name">Ekvira Foundation</string>
    <string name="top_logo">Top Logo</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_hint">MOBILE</string>
    <string name="otp">OTP</string>
    <string name="login">LOGIN</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="creat_profile">CREAT PROFILE</string>
    <string name="email_id_optional">email id optional</string>
    <string name="email_optional">EMAIL (Optional)</string>
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="gender">gender</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="mobile_capital">MOBILE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string-array name="gender">
        <item>GENDER</item>
        <item>FEMALE</item>
        <item>MALE</item>
    </string-array>
</resources>
